@@ -4,7 +4,7 @@ import json
 from collections import OrderedDict
 
 from trytond.model import fields
-from trytond.pyson import Eval
+from trytond.pyson import Eval, PYSONDecoder
 from trytond.rpc import RPC
 from trytond.transaction import Transaction
 from trytond.pool import Pool
@@ -27,6 +27,7 @@ class DictSchemaMixin(object):
     digits = fields.Integer('Digits', states={
             'invisible': ~Eval('type_').in_(['float', 'numeric']),
             }, depends=['type_'])
+    domain = fields.Char("Domain")
     selection = fields.Text('Selection', states={
             'invisible': Eval('type_') != 'selection',
             }, translate=True, depends=['type_'],
@@ -47,6 +48,9 @@ class DictSchemaMixin(object):
         cls.__rpc__.update({
                 'get_keys': RPC(instantiate=0),
                 })
+        cls._error_messages.update({
+                'invalid_domain': 'Invalid domain in schema "%(schema)s".',
+                })
 
     @staticmethod
     def default_digits():
@@ -55,6 +59,27 @@ class DictSchemaMixin(object):
     @staticmethod
     def default_selection_sorted():
         return True
+
+    @classmethod
+    def validate(cls, schemas):
+        super(DictSchemaMixin, cls).validate(schemas)
+        cls.check_domain(schemas)
+
+    @classmethod
+    def check_domain(cls, schemas):
+        for schema in schemas:
+            if not schema.domain:
+                continue
+            try:
+                value = PYSONDecoder().decode(schema.domain)
+            except Exception:
+                cls.raise_user_error('invalid_domain', {
+                        'schema': schema.rec_name,
+                        })
+            if not isinstance(value, list):
+                cls.raise_user_error('invalid_domain', {
+                        'schema': schema.rec_name,
+                        })
 
     def get_selection_json(self, name):
         db_selection = self.selection or ''
@@ -73,6 +98,7 @@ class DictSchemaMixin(object):
                 'name': record.name,
                 'string': record.string,
                 'type_': record.type_,
+                'domain': record.domain,
                 }
             if record.type_ == 'selection':
                 with Transaction().set_context(language=Config.get_language()):
